--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -16,17 +16,18 @@
 </head>
 <body>
   <div id="box">
-    <img src="assets/images/illustration-article.svg" alt="tela">
-    <p>Learning</p>
+    <img id="tela" src="assets/images/illustration-article.svg" alt="tela">
+    <p id="title"><b>Learning</b></p>
 
-    <h4>Published 21 Dec 2023</h4>
+    <h4 id="date">Published 21 Dec 2023</h4>
 
     <h2>HTML & CSS foundations</h2>
 
-    <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-
-    <img src="assets/images/image-avatar.webp" alt="cara">
-    <h6></h6>Greg Hooper</h6>   
+    <p id="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+    <div id="boxInBox">
+      <img id="cara" src="assets/images/image-avatar.webp" alt="cara">
+      <h4 id="name">Greg Hooper</h4>
+    </div>   
   </div>
   <footer>
     <div class="attribution">
